# docs/swagger.json
@@ -12,14 +12,14 @@
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
-        "/asset/all": {
+        "/asset": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Retrieves all assets available for purchase in the system.",
+                "description": "Retrieves all assets belonging to the currently authenticated user.",
                 "consumes": [
                     "application/json"
                 ],
@@ -29,13 +29,13 @@
                 "tags": [
                     "Asset"
                 ],
-                "summary": "Get List of Assets for Buying",
-                "operationId": "BuyingList",
+                "summary": "List User Assets",
+                "operationId": "MyAssets",
                 "responses": {
                     "200": {
-                        "description": "List of assets available for buying",
+                        "description": "List of user's assets",
                         "schema": {
-                            "$ref": "#/definitions/v1.assetsListResponse"
+                            "$ref": "#/definitions/v1.listOfAssetResponse"
                         }
                     },
                     "404": {
@@ -51,102 +51,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/asset/available": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Retrieves a list of all available assets, including both purchased and created assets.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Asset"
-                ],
-                "summary": "Get List of Available Assets",
-                "operationId": "AllAvailableAsset",
-                "responses": {
-                    "200": {
-                        "description": "List of available assets",
-                        "schema": {
-                            "$ref": "#/definitions/v1.assetsListResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "No assets found",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
-                    }
-                }
-            }
-        },
-        "/asset/buy": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Allows the user to purchase an asset by its ID.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Asset"
-                ],
-                "summary": "Buy Asset",
-                "operationId": "BuyAsset",
-                "parameters": [
-                    {
-                        "description": "Asset ID to be purchased",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/v1.deleteAssetRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Asset purchased successfully",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
-                    },
-                    "404": {
-                        "description": "Asset not found or purchase failed",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
-                    }
-                }
-            }
-        },
-        "/asset/create": {
+            },
             "post": {
                 "security": [
                     {
@@ -192,7 +97,137 @@
                 }
             }
         },
-        "/asset/delete": {
+        "/asset/market": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Retrieves all assets available for purchase in the system.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Asset"
+                ],
+                "summary": "Get List of Assets for Buying",
+                "operationId": "BuyingList",
+                "responses": {
+                    "200": {
+                        "description": "List of assets available for buying",
+                        "schema": {
+                            "$ref": "#/definitions/v1.listOfAssetResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "No assets found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
+        "/asset/purchased": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Retrieves a list of all purchased assets.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Asset"
+                ],
+                "summary": "Get List of Purchased Assets",
+                "operationId": "PurchasedAsset",
+                "responses": {
+                    "200": {
+                        "description": "List of purchased assets",
+                        "schema": {
+                            "$ref": "#/definitions/v1.listOfAssetResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "No assets found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
+        "/asset/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get an asset from the system based on the provided asset ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Asset"
+                ],
+                "summary": "Get Asset",
+                "operationId": "GetAsset",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Asset ID to retrieve",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Asset retrieved successfully",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Asset"
+                        }
+                    },
+                    "404": {
+                        "description": "Asset not found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "security": [
                     {
@@ -213,13 +248,11 @@
                 "operationId": "DeleteAsset",
                 "parameters": [
                     {
+                        "type": "integer",
                         "description": "Asset ID to be deleted",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/v1.deleteAssetRequest"
-                        }
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -244,14 +277,14 @@
                 }
             }
         },
-        "/asset/my": {
+        "/asset/{id}/buy": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Retrieves all assets belonging to the currently authenticated user.",
+                "description": "Allows the user to purchase an asset by its ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -261,17 +294,26 @@
                 "tags": [
                     "Asset"
                 ],
-                "summary": "List User Assets",
-                "operationId": "MyAssets",
+                "summary": "Buy Asset",
+                "operationId": "BuyAsset",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Asset ID to retrieve",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "List of user's assets",
+                        "description": "Asset purchased successfully",
                         "schema": {
-                            "$ref": "#/definitions/v1.assetsListResponse"
+                            "$ref": "#/definitions/v1.response"
                         }
                     },
                     "404": {
-                        "description": "No assets found",
+                        "description": "Asset not found or purchase failed",
                         "schema": {
                             "$ref": "#/definitions/v1.response"
                         }
@@ -285,7 +327,7 @@
                 }
             }
         },
-        "/deposit/check": {
+        "/deposit": {
             "get": {
                 "security": [
                     {
@@ -318,9 +360,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/deposit/make": {
+            },
             "post": {
                 "security": [
                     {
@@ -367,7 +407,7 @@
             }
         },
         "/login": {
-            "get": {
+            "post": {
                 "description": "Authenticates the user by verifying credentials and returns a JWT token on success.",
                 "consumes": [
                     "application/json"
@@ -481,17 +521,6 @@
                 }
             }
         },
-        "v1.assetsListResponse": {
-            "type": "object",
-            "properties": {
-                "assets": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.Asset"
-                    }
-                }
-            }
-        },
         "v1.createAssetRequest": {
             "type": "object",
             "properties": {
@@ -503,14 +532,6 @@
                 },
                 "price": {
                     "type": "number"
-                }
-            }
-        },
-        "v1.deleteAssetRequest": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
                 }
             }
         },
@@ -530,6 +551,17 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "v1.listOfAssetResponse": {
+            "type": "object",
+            "properties": {
+                "assets": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Asset"
+                    }
                 }
             }
         },
@@ -556,6 +588,7 @@
     },
     "securityDefinitions": {
         "ApiKeyAuth": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
